Fri Feb 21 08:27:19 2014  Eric Wong  <e@80x24.org>

	* include/ruby/ruby.h (RB_GC_GUARD):
	  use rb_gc_guarded_ptr_val on non-GCC/MSC
	* gc.c (rb_gc_guarded_ptr_val): rename and adjust argument.
	  RB_GC_GUARD should be robust enough for any compiler.
	  [ruby-core:60816] [Bug #7805]

Thu Feb 20 22:21:26 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c (numeric_getaddrinfo): Use xcalloc.
	  Suggested by Eric Wong.
	  https://bugs.ruby-lang.org/issues/9525#note-14

Thu Feb 20 11:21:13 2014  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_flatten): fix behavior of flatten(-1).
	  [ruby-dev:47988] [Bug #9533]

	* test/ruby/test_array.rb: test for above.

Wed Feb 19 18:57:02 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket: Bypass getaddrinfo() if node and serv are numeric.
	  Reporeted by Naotoshi Seo.  [ruby-core:60801] [Bug #9525]

	* ext/socket/extconf.rb: Detect struct sockaddr_in6.sin6_len.

	* ext/socket/sockport.h (SET_SIN6_LEN): New macro.
	  (INIT_SOCKADDR_IN6): Ditto.

	* ext/socket/rubysocket.h (struct rb_addrinfo): Add
	  allocated_by_malloc field.

	* ext/socket/raddrinfo.c (numeric_getaddrinfo): New function.
	  (rb_getaddrinfo): Call numeric_getaddrinfo at first.
	  (rb_freeaddrinfo): Free struct addrinfo properly when it is
	  allocated by numeric_getaddrinfo.

Wed Feb 19 18:31:48 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket: Wrap struct addrinfo by struct rb_addrinfo.

Wed Feb 19 17:47:01 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ipsocket.c (ip_s_getaddress): Don't access freed memory.

Wed Feb 19 11:39:41 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: it must see rb_cv_broken_memmem not rb_cv_func_memmem.

Tue Feb 18 23:18:41 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/socket/test_socket.rb: unix socket is required by test case.

Tue Feb 18 20:48:38 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/socket/test_addrinfo.rb: remove unused variables.